# machine-check

./: .gitignore  Cargo.toml  README.md
btor2rs-bin/: Cargo.toml
btor2rs-bin/src/: main.rs
core/machine-check/: Cargo.toml  README.md
core/machine-check-avr/: Cargo.toml  README.md
core/machine-check-avr/examples/: basic_branch.hex  basic_branch.rs
core/machine-check-avr/src/: lib.rs  main.rs  system.rs
core/machine-check-bitmask-switch/: Cargo.toml
core/machine-check-bitmask-switch/src/: arm.rs  lib.rs  util.rs
core/machine-check-bitmask-switch/src/arm/: util.rs
core/machine-check-common/: Cargo.toml  README.md
core/machine-check-common/src/: check.rs  iir.rs  ir_common.rs  lib.rs  node_id.rs  property.rs  value.rs
core/machine-check-common/src/iir/: expr.rs  func.rs  interpretation.rs  path.rs  stmt.rs  ty.rs  variable.rs
core/machine-check-common/src/property/: atomic.rs  canonical.rs  closed_form.rs  enf.rs  misc.rs  parser.rs  pnf.rs  transition_depth.rs
core/machine-check-common/src/value/: param_valuation.rs
core/machine-check-exec/: Cargo.toml  README.md
core/machine-check-exec/src/: framework.rs  lib.rs  model_check.rs  precision.rs  property.rs  proposition.rs  refinery.rs  space.rs  state_store.rs
core/machine-check-exec/src/framework/: refine.rs  regenerate.rs  work_state.rs
core/machine-check-exec/src/model_check/: classic.rs  deduce.rs  history.rs  property_checker.rs
core/machine-check-exec/src/property/: enf.rs  misc.rs  parser.rs  pnf.rs
core/machine-check-exec/src/proposition/: enf.rs  misc.rs  parser.rs  pnf.rs
core/machine-check-exec/src/space/: graph.rs  labelling.rs  meta_wrap.rs  state.rs  store.rs
core/machine-check-gui/: .gitignore  Cargo.toml  README.md  build.rs
core/machine-check-gui/content/: index.html  render.js  script.js  style.css  update.js
core/machine-check-gui/src/: backend.rs  frontend.rs  gui.rs  lib.rs  main.rs  shared.rs
core/machine-check-gui/src/backend/: api.rs  business.rs  gui.rs  sync.rs  window.rs  workspace.rs
core/machine-check-gui/src/frontend/: client.rs  content.rs  fetch.rs  interaction.rs  snapshot.rs  tiling.rs  update.rs  util.rs  view.rs  work.rs
core/machine-check-gui/src/shared/: snapshot.rs
core/machine-check-machine/: Cargo.toml  README.md
core/machine-check-machine/src/: abstr.rs  concr.rs  description.rs  iir.rs  into_iir.rs  lib.rs  refin.rs  ssa.rs  support.rs  util.rs  wir.rs
core/machine-check-machine/src/abstr/: item_impl.rs  item_struct.rs  rules.rs
core/machine-check-machine/src/concr/: item_impl.rs
core/machine-check-machine/src/description/: attribute_disallower.rs  convert_indexing.rs  convert_to_ssa.rs  convert_total.rs  convert_types.rs  error.rs  expand_macros.rs  from_syn.rs  infer_types.rs  resolve_use.rs
core/machine-check-machine/src/iir/: expr.rs  func.rs  interpretation.rs  stmt.rs  variable.rs
core/machine-check-machine/src/into_iir/: expr.rs  func.rs  path.rs  stmt.rs  ty.rs
core/machine-check-machine/src/refin/: item_impl.rs  item_struct.rs  rules.rs  util.rs
core/machine-check-machine/src/ssa/: attribute_disallower.rs  convert_indexing.rs  convert_mutable.rs  convert_panic.rs  convert_to_ssa.rs  convert_to_tac.rs  convert_total.rs  convert_types.rs  error.rs  expand_macros.rs  from_syn.rs  infer_types.rs  normalize_constructs.rs  normalize_expressions.rs  normalize_scope.rs  resolve_use.rs  subsume_blocks.rs
core/machine-check-machine/src/support/: backward.rs  block_convert.rs  block_converter.rs  error_list.rs  errors.rs  field_manipulate.rs  ident_creator.rs  ident_renamer.rs  local.rs  local_types.rs  machine_error.rs  manipulate.rs  meta_eq.rs  path_rules.rs  rules.rs  special_trait.rs  ssa.rs  strip_machine.rs  struct_rules.rs  temporary.rs  types.rs
core/machine-check-machine/src/util/: arg.rs  attr.rs  expr.rs  field.rs  impl_item.rs  item.rs  pat.rs  path.rs  stmt.rs  ty.rs
core/machine-check-machine/src/wir/: call.rs  expr.rs  from_syn.rs  impl_item.rs  item.rs  op.rs  path.rs  span.rs  stmt.rs  to_syn.rs  ty.rs
core/machine-check-macros/: Cargo.toml
core/machine-check-macros/src/: lib.rs
core/machine-check/examples/: conditional_panic.rs  counter.rs  counter_3.rs  division.rs  mu_even.rs  mu_infinitely_often.rs  parametric.rs  recovery.rs  simple_risc.rs  timed_panic.rs
core/machine-check/resources/: Prepare_Cargo.toml  Target_Cargo.toml
core/machine-check/src/: args.rs  lib.rs  machine.rs  main.rs  prepare.rs  traits.rs  translate.rs  types.rs  util.rs  verify.rs
core/machine-check/src/machine/: abstr.rs  manipulation.rs  refin.rs  support.rs  util.rs
core/machine-check/tests/: trybuild.rs
core/mck/: Cargo.toml  README.md
core/mck/src/: array.rs  bitvector.rs  boolean.rs  internal.rs  lib.rs  mark.rs  panic.rs  signed.rs  three_valued.rs  traits.rs  types.rs  unsigned.rs
core/mck/src/array/: abstr.rs  (+3 more)
machine-check/: Cargo.toml
machine-check-lib/: Cargo.toml
machine-check-lib/src/: lib.rs  transcription.rs  write.rs
machine-check-table/: Cargo.toml
machine-check-table/src/: main.rs
machine-check/resources/: Target_Cargo.toml
machine-check/src/: forward.rs  interval_domain.rs  lib.rs  machine.rs  main.rs  mark.rs  prepare.rs  run.rs  ssa.rs  transcribe.rs  transcription.rs  verify.rs  write.rs
machine-check/src/transcribe/: btor2.rs
machine-check/src/transcription/: simplification.rs  util.rs
macros/machine-check-macros/: Cargo.toml  README.md
macros/machine-check-macros/src/: lib.rs
macros/machine-check-macros/tests/: trybuild.rs
support/machine-check-table/: Cargo.toml
support/machine-check-table/src/: main.rs  table.rs  xml.rs
systems/machine-check-avr/: Cargo.toml  README.md
systems/machine-check-avr/examples/: basic_branch.rs
systems/machine-check-avr/src/: lib.rs  main.rs  system.rs  util.rs
systems/machine-check-avr/tests/: mod.rs
transpile/machine-check-compile/: Cargo.toml  README.md
transpile/machine-check-compile/resources/: Prepare_Cargo.toml  Target_Cargo.toml
transpile/machine-check-compile/src/: features.rs  lib.rs  prepare.rs  verify.rs
(+627 files in other folders)
