[workspace]

resolver = "2"
members = ["core/*", "transpile/*", "support/*"]


[patch.crates-io]
btor2rs = { path = "./core/btor2rs" }

machine-check-common = { path = "./core/machine-check-common" }
mck = { path = "./core/mck" }

machine-check-bitmask-switch = { path = "./core/machine-check-bitmask-switch" }
machine-check-macros = { path = "./core/machine-check-macros" }

machine-check-machine = { path = "./core/machine-check-machine" }
machine-check-exec = { path = "./core/machine-check-exec" }
machine-check = { path = "./core/machine-check" }

machine-check-compile = { path = "./transpile/machine-check-compile" }
machine-check-hw = { path = "./transpile/machine-check-hw" }
