[workspace]

resolver = "2"
members = ["core/*", "macros/*", "transpile/*", "systems/*"]


[patch.crates-io]

machine-check-common = { path = "./core/machine-check-common" }
mck = { path = "./core/mck" }

machine-check-bitmask-switch = { path = "./macros/machine-check-bitmask-switch" }
machine-check-macros = { path = "./macros/machine-check-macros" }

machine-check-machine = { path = "./core/machine-check-machine" }
machine-check-exec = { path = "./core/machine-check-exec" }
machine-check-gui = { path = "./core/machine-check-gui" }
machine-check = { path = "./core/machine-check" }

machine-check-compile = { path = "./transpile/machine-check-compile" }
machine-check-hw = { path = "./transpile/machine-check-hw" }

[profile.release]
debug = true
