[package]
name = "btor2rs-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btor2rs = { path = "../btor2rs" }
anyhow = "1.0.75"
proc-macro2 = "1.0.67"
prettyplease = "0.2.15"
syn = "2.0.37"
walkdir = "2.4.0"
