[package]
name = "machine-check-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
btor2rs = { path = "../btor2rs" }
mck = { path = "../mck" }
anyhow = "1.0.75"
proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
quote = "1.0.28"
prettyplease = "0.2.15"
syn-path = "2.0.0"
camino = "1.1.6"
