[package]
name = "machine-check-table"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
yaml-rust = "0.4"
machine-check = { path = "../machine-check" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simple-xml-builder = "1.1.0"
clap = { version = "4.4.6", features = ["derive"] }
camino = "1.1.6"
