[package]
name = "machine-check"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
btor2rs = { path = "../btor2rs" }
machine-check-lib = { path = "../machine-check-lib" }
machine-check-exec-prepare = { path = "../machine-check-exec-prepare" }
mck = { path = "../mck" }
anyhow = "1.0.75"
proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
quote = "1.0.28"
prettyplease = "0.2.15"
syn-path = "2.0.0"
serde = "1.0.188"
serde_json = "1.0.107"
tempdir = "0.3.7"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.6", features = ["derive"] }
