[package]
name = "machine-check-avr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate for the formal verification of AVR microcontrollers by machine-check"
rust-version = "1.75"

[dependencies]
mck = "=0.1.0"
machine-check-machine = "=0.1.0"
machine-check-macros = "=0.1.0"
machine-check = "=0.1.0"
machine-check-exec = "=0.1.0"
ihex = "3.0.0"
