[package]
name = "machine-check-common"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility crate for the formal verification tool machine-check"
rust-version = "1.83"

[dependencies]
mck = "=0.5.0"

thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive", "rc"] }
proc-macro2 = "1.0.67"
strum = { version = "0.27", features = ["derive"] }
