[package]
name = "machine-check-common"
version = "0.6.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility crate for the formal verification tool machine-check"
rust-version = "1.83"

[dependencies]
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive", "rc"] }
