[package]
name = "machine-check-exec"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility crate for the formal verification tool machine-check"
rust-version = "1.83"

[dependencies]
mck = "=0.5.0"
machine-check-common = "=0.5.0"
machine-check-machine = "=0.5.0"

log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }

bimap = "0.6.3"
petgraph = "0.6.4"
partitions = "0.2.4"
