[package]
name = "machine-check-gui"
version = "0.3.1"
edition = "2021"

[dependencies]
machine-check-common = "=0.3.1"
mck = "=0.3.1"
machine-check-exec = "=0.3.1"

anyhow = "1.0.89"

log = "0.4.20"
env_logger = "0.10.0"

wry = "0.43.1"
tao = "0.30.0"
http = "1.1.0"
mime_guess = "2.0.5"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
