[package]
name = "machine-check-gui"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# For debug-logging build statements. 
build-log-debug = []

[dependencies]
# Shared dependencies.
#
# Note that we need to be also able to compile the frontend 
# using the backend architecture, so this includes dependencies 
# that are frontend-only in practice.
anyhow = "1.0.89"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Backend-only dependencies.
machine-check-common = "=0.3.1"
mck = "=0.3.1"
machine-check-exec = "=0.3.1"

petgraph = "0.6.4"


log = "0.4.20"
env_logger = "0.10.0"

wry = "0.43.1"
tao = "0.30.0"
http = "1.1.0"
mime_guess = "2.0.5"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

include_dir = "0.6.2"

[build-dependencies]
# Used to prepare the frontend build.
tempfile = "3.15.0"
toml_edit = "0.22.22"
anyhow = "1.0.89"
tinyjson = "2"
