[package]
name = "machine-check-gui"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility crate for the formal verification tool machine-check"
rust-version = "1.83"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# For debug-logging build statements. 
build-log-debug = []

[dependencies]
# Shared dependencies.
#
# Note that we need to be also able to compile the frontend 
# using the backend architecture, so this includes dependencies 
# that are frontend-only in practice.
machine-check-common = "=0.3.1"
mck = "=0.3.1"
machine-check-exec = "=0.3.1"

anyhow = "1.0.89"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.76", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableCellElement",
    "HtmlUListElement",
    "HtmlLiElement",
    "HtmlInputElement",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "Node",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "DomRect",
    "CssStyleDeclaration",
    "DomTokenList",
    "ResizeObserver",
] }
console_error_panic_hook = "0.1.7"

serde = { version = "1.0.188", features = ["derive"] }
rmp-serde = "1.3.0"
serde-wasm-bindgen = "0.6"

bimap = "0.6.3"

chrono = { version = "0.4.40", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Backend-only dependencies.

petgraph = "0.6.4"


log = "0.4.20"
env_logger = "0.10.0"

wry = { version = "0.50.4", features = ["devtools"] }
tao = "0.32.8"
http = "1.1.0"
mime_guess = "2.0.5"


include_dir = "0.6.2"

[build-dependencies]
# Used to prepare the frontend build.
tempfile = "3.15.0"
toml_edit = "0.22.22"
anyhow = "1.0.89"
tinyjson = "2"
