[package]
name = "machine-check-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Machine crate for the formal verification tool machine-check"
rust-version = "1.75"

[dependencies]
proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
syn-path = "2.0.0"
quote = "1.0.28"
prettyplease = "0.2.15"
thiserror = "1.0.49"
machine-check-bitmask-switch = "=0.1.0"
