[package]
name = "machine-check-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro crate for the formal verification tool machine-check"
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
quote = "1.0.28"
prettyplease = "0.2.15"
machine-check-machine = "=0.1.0"
unicode-ident = "1.0.12"
num = "0.4.1"
syn-path = "2.0.0"
