[package]
name = "machine-check"
version = "0.3.0-alpha-1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Formal verification tool for digital systems"
rust-version = "1.75"

[dependencies]
machine-check-common = "=0.3.0-alpha-1"
mck = "=0.3.0-alpha-1"
machine-check-macros = "=0.3.0-alpha-1"
machine-check-exec = "=0.3.0-alpha-1"

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
