[package]
name = "machine-check"
version = "0.6.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Formal verification tool for digital systems"
rust-version = "1.83"

[features]
gui = ["machine-check-gui"]
Zdual_interval = ["mck/Zdual_interval"]

[dependencies]
machine-check-common = "=0.6.0-alpha.1"
mck = "=0.6.0-alpha.1"
machine-check-macros = "=0.6.0-alpha.1"
machine-check-exec = "=0.6.0-alpha.1"
machine-check-gui = { version = "=0.6.0-alpha.1", optional = true }

log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
trybuild = "1.0.105"
