[package]
name = "mck"
version = "0.4.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Type/operation utility crate for the formal verification tool machine-check"
rust-version = "1.83"

[dependencies]
seq-macro = "0.3.5"
num = "0.4.3"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
