[package]
name = "machine-check-macros"
version = "0.4.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro crate for the formal verification tool machine-check"
rust-version = "1.83"

[lib]
proc-macro = true

[dependencies]
machine-check-machine = "=0.4.0-alpha.3"
machine-check-bitmask-switch = "=0.4.0-alpha.3"

proc-macro2 = "1.0.67"
syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
quote = "1.0.28"
prettyplease = "0.2.15"
syn-path = "2.0.0"
