[package]
name = "machine-check-table"
version = "0.3.0-alpha-1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
machine-check-hw = "=0.3.0-alpha-1"

anyhow = "1.0.75"
yaml-rust = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simple-xml-builder = "1.1.0"
clap = { version = "4.4.6", features = ["derive"] }
camino = "1.1.6"
toml = "0.8.5"
prettytable-rs = "0.10"
