[package]
name = "machine-check-avr"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate for the formal verification of AVR microcontrollers by machine-check"
rust-version = "1.83"

[dependencies]
machine-check = "=0.3.1"

ihex = "3.0.0"
clap = { version = "4.4.6", features = ["derive"] }
