[package]
name = "machine-check-avr"
version = "0.5.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate for the formal verification of AVR microcontrollers by machine-check"
rust-version = "1.83"

[features]
gui = ["machine-check/gui"]
Zdual_interval = ["machine-check/Zdual_interval"]

[dependencies]
machine-check = "=0.5.0-alpha.2"

ihex = "3.0.0"
clap = { version = "4.4.6", features = ["derive"] }
pastey = "0.1.0"
