[package]
name = "machine-check-compile"
version = "0.4.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Utility crate for formal verification tool for digital systems"
rust-version = "1.83"

[dependencies]
machine-check-common = "=0.4.0-alpha.1"

syn = { version = "2.0.37", features = ["visit-mut", "extra-traits"] }
serde = "1.0.188"
serde_json = "1.0.107"
tempdir = "0.3.7"
log = "0.4.20"
env_logger = "0.10.0"
camino = "1.1.6"
cargo_metadata = "0.18.0"
thiserror = "1.0.49"
prettyplease = "0.2.15"
